--- a/hobby.html
+++ b/hobby.html
@@ -121,7 +121,7 @@
             </div>
         </div>
         <div class="card" style="margin-left: 30px;">
-            <img src="p2.jpg"
+            <img src="p2.JPG"
                 style="width: 150px; height: 150px; padding-top: 20px; margin-left: auto; margin-right: auto; display: block;">
             <div class="container">
                 <h4 style="text-align: center; "><b>Shugandha Beach</b></h4>
@@ -137,7 +137,7 @@
             </div>
         </div>
         <div class="card" style="margin-left: 30px;">
-            <img src="p4.jpg"
+            <img src="p4.JPG"
                 style="width: 150px; height: 150px; padding-top: 20px; margin-left: auto; margin-right: auto; display: block;">
             <div class="container">
                 <h4 style="text-align: center; "><b>Foundation Day</b></h4>
