--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="welcome_div">
 
         <div style="width: 30%; float: left; height: 100%;">
-                <img src="sadi.jpg" style="margin-left: 25px; border-radius: 10px; border: 1px solid ghostwhite; width: 300px; height: 305px;  margin-right: auto; display: block; margin-top: 20px;">
+                <img src="logo.jpg" style="margin-left: 25px; border-radius: 10px; border: 1px solid ghostwhite; width: 300px; height: 305px;  margin-right: auto; display: block; margin-top: 20px;">
 
         </div>
 
