--- a/skills.html
+++ b/skills.html
@@ -51,10 +51,14 @@
     </div>
 
 
-    <div  class="bot_div">
-
-        <p style="text-align: right; margin-right: 30px;">&copy; All Copyright Reserved 2021</p>
-    
+  <div  class="bot_div">
+        <a href="https://www.instagram.com/sadi_hib/" target="_blank"><img src="instagram.png" width="32px" height="32px" style="border-radius: 10px; float: right; margin-top: 10px; margin-right: 20px; background-color: white;">  </a>  
+        <a href="https://twitter.com/MdMahbu60733591" target="_blank"><img src="twitter.png" width="32px" height="32px" style="border-radius: 10px; float: right; margin-top: 10px; margin-right: 10px; background-color: white;">  </a>  
+        <a href="https://www.researchgate.net/profile/Md-Mahbubur-Rahman-12" target="_blank"><img src="researchgate.png" width="32px" height="32px" style="border-radius: 10px; float: right; margin-top: 10px; margin-right: 10px; background-color: white;">  </a>  
+        <a href="https://www.linkedin.com/in/md-mahbubur-rahman-sadi/" target="_blank"><img src="linkedin.png" width="32px" height="32px" style="border-radius: 10px; float: right; margin-top: 10px; margin-right: 10px; background-color: white;">  </a>  
+        <a href="https://www.facebook.com/md.sadi.5458" target="_blank"><img src="facebook.png" width="32px" height="32px" style="border-radius: 10px; float: right; margin-top: 10px; margin-right: 10px; background-color: white;">  </a>  
+        
+        <p style="text-align: center; margin-right: 30px; float: right; padding-bottom: -10px;">&copy; All Copyright Reserved 2021</p>
         </div>
 </body>
 
