--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
         <div style="width: 65%; height: 100%; float: right; margin-right: 25px; text-align: justify; font-size: large;">
 
-            <p>Assalamu Alaikum!!! Welcome to my portfolio... I am Md. Mahbubura Rahman. I am a student of Computer Science and Engineering at Daffodil International University, Dhaka-1207, Bangladesh. I want to be an IT officer in any renown Bank.</p>
+            <p>Assalamu Alaikum!!! Welcome to my portfolio... I am Md. Mahbubur Rahman. I am a student of Computer Science and Engineering at Daffodil International University, Dhaka-1207, Bangladesh. I want to be an IT officer in any renown Bank.</p>
             <p>My career objective to join a dynamic and progressive organization offering ample opportunities for diversified experience growth, offering an environment in which the advancement is based on strength of individual contributions to the realization of the organization goals.</p>
             <p>We can easily manage if we will only take, each day, the burden appointed to it. But the load will be too heavy for us if we carry yesterday’s burden over again today, and then add the burden of the morrow before we are required to bear it. 
 
